"Bazel module definition, see https://bazel.build/external/overview#bzlmod"

module(
    name = "container_structure_test",
    # Replaced dynamically when published
    version = "0.0.0",
    compatibility_level = 1,
)

# To run jq
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")

ext = use_extension("//:repositories.bzl", "extension")
use_repo(
    ext,
    "structure_test_toolchains",
    # For testing only
    "structure_test_st_darwin_amd64",
    "structure_test_st_darwin_arm64",
    "structure_test_st_linux_amd64",
    "structure_test_st_linux_arm64",
    "structure_test_st_linux_s390x",
    "structure_test_st_windows_amd64",
)

register_toolchains("@structure_test_toolchains//:all")

# 0.5.4 is the first version with bzlmod support
bazel_dep(name = "stardoc", version = "0.7.2", dev_dependency = True, repo_name = "io_bazel_stardoc")
